--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
     rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.5)
   ),
-    url('hero-bg.jpg') center/cover no-repeat;
+    url('images/9.jpg') center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
